@@ -743,6 +743,7 @@ gimprc
 gimprc_user
 gimprc.5
 gimptool
+gimptool.1
 gimp.spec
 libgimp/gimpfeatures.h
 libgimp/Makefile
