@@ -31,7 +31,7 @@
 .\" Wed Mar  3 13:09:52 MET 1999 Sven Neumann <sven@gimp.org>
 .\"   * reflect the changes that were made to the resolution stuff
 .\"
-.TH GIMPRC 5 "15 Jan 2000" "Version @GIMP_VERSION@"
+.TH GIMPRC 5 "23 June 2000" "Version @GIMP_VERSION@" "GIMP Manual Pages"
 .SH NAME
 gimprc \- gimp configuration file
 .SH DESCRIPTION
@@ -456,4 +456,4 @@ System-wide configuration file
 .I $HOME/.gimp-1.1/gimprc
 Per-user configuration file
 .SH "SEE ALSO"
-.BR gimp (1).
+.BR gimp (1), gimptool (1)
