@@ -1,0 +1,225 @@
+.TH GIMPTOOL 1 "23 June 2000" "Version @GIMP_VERSION@" "GIMP Manual Pages"
+.SH NAME
+gimptool - script to perform various Gimpy functions
+.SH SYNOPSIS
+.B gimptool
+[\-\-prefix\fI[=DIR]\fP] [\-\-exec\-prefix\fI[=DIR]\fP] [\-\-version]
+[\-\-help] [\-\-quiet] [\-\-silent] [\-n] [\-\-just-print] [\-\-dry-run] [\-\-recon]
+[\-\-bindir] [\-\-sbindir] [\-\-libexecdir] [\-\-datadir] [\-\-sysconfdir]
+[\-\-sharedstatedir] [\-\-localstatedir] [-\-libdir] [\-\-infodir] [\-\-mandir]
+[\-\-includedir] [\-\-gimpplugindir] [\-\-gimpdatadir]
+[\-\-libs] [\-\-libs-noui] [\-\-cflags] [\-\-cflags-noi] [\-\-build \fIplug\-in.c\fP]
+[\-\-build\-strip \fIplug\-in.c\fP] [\-\-install \fIplug\-in.c\fP]
+[\-\-install-strip \fIplug\-in.c\fP] [\-\-install-admin \fIplug-in.c\fP] 
+[\-\-install\-bin \fIplug\-in\fP]
+[\-\-install\-admin\-strip \fIplug-in.c\fP] [\-\-install\-bin\-strip \fIplug\-in\fP]
+[\-\-\install\-admin\-bin \fIplug\-in\fP] [\-\-install\-script \fIscript.scm\fP] 
+[\-\-\install\-admin\-script \fIscript.scm\fP]
+[\-\-uninstall\-bin \fIplug\-in\fP] [\-\-uninstall\-admin\-bin \fIplug\-in\fP]
+[\-\-uninstall\-script \fIscript.scm\fP] [\-\-uninstall\-admin\-script \fIscript.scm\fP]
+
+
+.SH DESCRIPTION
+.PP
+\fIgimptool\fP is a tool that can, among other things, build plug-ins
+or scripts and install them if they are distributed in one source file.
+.PP
+\fIgimptool\fP can also be used by programs that need to know what libraries
+and include-paths \fIGimp\fP was compiled with. This is especially useful
+in Makefiles.
+
+.SH OPTIONS
+.l
+\fIgimptool\fP accepts the following options:
+.TP 8
+.B  \-\-version
+Print the currently installed version of \fIGimp\fP on the standard output.
+.TP 8
+.B \-\-help
+Print out the help blurb, showing commonly used commandline options.
+.TP 8
+.B \-\-quiet
+Run quietly without echoing any of the build commands.
+.TP 8
+.B \-\-silent
+Run silently without echoing any of the build commands. Same as \-\-quiet.
+.TP 8
+.B \-n
+Test mode. Print the commands but dont actually execute them. Useful for
+making dry runs for testing.
+.TP 8
+.B \-\-just-print
+Test mode. Print the commands but dont actually execute them. Same as \-n.
+.TP 8
+.B \-\-dry-run
+Test mode. Print the commands but dont actually execute them. Same as \-n.
+.TP 8
+.B \-\-recon
+Test mode. Print the commands but dont actually execute them. Same as \-n.
+.TP 8
+.B \-\-bindir
+Outputs the bindir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-sbindir
+Outputs the sbindir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-libexecdir
+Outputs the libexecdir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-datadir
+Outputs the datadir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-sysconfdir
+Outputs the sysconfdir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-sharedstatedir
+Outputs the sharedstatedir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-localstatedir
+Outputs the localstatedir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-libdir
+Outputs the libdir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-infodir
+Outputs the infodir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-mandir
+Outputs the mandir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-includedir
+Outputs the includedir used to install the \fIGimp\fP.
+.TP 8
+.B \-\-gimpdatadir
+Outputs the actual directory where the \fIGimp\fP data files were installed.
+.TP 8
+.B \-\-gimpplugindir
+Outputs the actual directory where the \fIGimp\fP plugins were installed.
+.TP 8
+.B  \-\-build \fIplug-in.c\fP
+Compile and link \fIplug-in.c\fP into a \fIGimp\fP plug-in.
+.TP 8
+.B  \-\-build\-strip \fIplug-in.c\fP
+Compile,link, and strip \fIplug-in.c\fP into a \fIGimp\fP plug-in.
+.TP 8
+.B  \-\-install \fIplug-in.c\fP
+Compile, link, and install \fIplug-in.c\fP into the user's personal \fIGimp\fP
+plug-in directory (\fB$HOME\fP/.gimp/plug-ins)
+.TP 8
+.B  \-\-install\-strip \fIplug-in.c\fP
+Compile, link,strip,  and install \fIplug-in.c\fP into the user's personal \fIGimp\fP
+plug-in directory (\fB$HOME\fP/.gimp/plug-ins)
+.TP 8
+.B  \-\-install\-admin \fIplug-in.c\fP
+Compile, link, and install \fIplug-in.c\fP into the system-wide \fIGimp\fP
+plug-in directory (\fB$PREFIX\fP/lib/gimp/1.0/plug-ins)
+.TP 8
+.B  \-\-install\-bin \fIplug-in\fP
+Install \fIplug-in\fP into the user's personal \fIGimp\fP
+plug-in directory (\fB$HOME\fP/.gimp/plug-ins)
+.TP 8
+.B  \-\-install\-admin\-bin \fIplug-in\fP
+Install \fIplug-in\fP into the system-wide \fIGimp\fP
+plug-in directory (\fB$PREFIX\fP/lib/gimp/1.0/plug-ins)
+.TP 8
+.B  \-\-install\-bin\-strip \fIplug-in\fP
+Install stripped \fIplug-in\fP into the user's personal \fIGimp\fP
+plug-in directory (\fB$HOME\fP/.gimp/plug-ins)
+.TP 8
+.B  \-\-install\-admin\-bin\-strip \fIplug-in\fP
+Install stripped \fIplug-in\fP into the system-wide \fIGimp\fP
+plug-in directory (\fB$PREFIX\fP/lib/gimp/1.0/plug-ins)
+.TP 8
+.B  \-\-install\-script \fIscript.scm\fP
+Install \fIscript.scm\fP into the user's personal \fIGimp\fP
+script directory (\fB$HOME\fP/.gimp/scripts)
+.TP 8
+.B  \-\-install\-admin\-script \fIscript.scm\fP
+Install \fIscript.scm\fP into the system-wide \fIGimp\fP
+script directory (\fB$PREFIX\fP/share/gimp/scripts)
+.TP 8
+.B  \-\-uninstall\-bin \fIplug-in\fP
+Uninstall \fIplug-in\fP from the user's personal \fIGimp\fP
+plug-in directory (\fB$HOME\fP/.gimp/plug-ins)
+.TP 8
+.B  \-\-uninstall\-admin\-bin \fIplug-in\fP
+Uninstall \fIplug-in\fP from the system-wide \fIGimp\fP
+plug-in directory (\fB$PREFIX\fP/lib/gimp/1.0/plug-ins)
+.TP 8
+.B  \-\-uninstall\-script \fIscript.scm\fP
+Uninstall \fIscript.scm\fP from the user's personal \fIGimp\fP
+script directory (\fB$HOME\fP/.gimp/scripts)
+.TP 8
+.B  \-\-uninstall\-admin\-script \fIscript.scm\fP
+Uninstall \fIscript.scm\fP from the system-wide \fIGimp\fP
+script directory (\fB$PREFIX\fP/share/gimp/scripts)
+.TP 8
+.B  \-\-libs
+Print the linker flags that are necessary to link a \fIGimp\fP plug-in.
+.TP 8
+.B \-\-libs-noui
+Print the linker flags that are necessary to link a \fIGimp\fP plug-in, for
+plugins that do not require the GTK libs.
+.TP 8
+.B  \-\-cflags
+Print the compiler flags that are necessary to compile a \fIGimp\fP plug-in.
+.TP 8
+.B \-\-clags-noui
+Print the compiler flags that are necessary to compile a \fIGimp\fP plug-in
+for plugins that do not require the GTK libs.
+.TP 8
+.B  \-\-prefix=PREFIX
+If specified, use PREFIX instead of the installation prefix that \fIGimp\fP
+was built with when computing the output for the \-\-cflags and
+\-\-libs options. This option is also used for the exec prefix
+if \-\-exec\-prefix was not specified. This option must be specified
+before any \-\-libs or \-\-cflags options.
+.TP 8
+.B  \-\-exec\-prefix=PREFIX
+If specified, use PREFIX instead of the installation exec prefix that
+\fIGimp\fP was built with when computing the output for the \-\-cflags
+and \-\-libs options. This option must be specified before any
+\-\-libs or \-\-cflags options.
+
+.SH ENVIRONMENT
+.PP
+.TP 8
+.B GTK_CONFIG
+to get the location of the gtk-config program.
+.TP 8
+.B CC
+to get the name of the desired C compiler.
+.TP 8
+.B CFLAGS
+to get the preferred flags to pass to the C compiler for plug-in building.
+.TP 8
+.B LDFLAGS
+to get the prefered flags for passing to the linker.
+.TP 8
+.B LIBS
+for passing extra libs that may be needed in the build process. For example,
+LIBS=-lintl .
+.TP 8
+.B GTK_CONFIG
+path to the gtk-config shell script used by gimptool and in the build
+process of many gtk apps.
+.SH SEE ALSO
+.BR gimp (1),
+.BR gtk-config (1)
+.SH AUTHORS
+gimptool was written by Manish Singh (yosh@gimp.org) and based on
+gtk-config by Owen Taylor (owen@gtk.org).
+
+This man page was written by Ben Gertzfield (che@debian.org), and tweaked
+by Manish Singh (yosh@gimp.org), Adrian Likins (adrian@gimp.org) and Marc
+Lehmann (pcg@goof.com>).
+
+
+.SH COPYRIGHT
+Copyright \(co  1998 Owen Taylor and Manish Singh
+
+Permission to use, copy, modify, and distribute this software and its
+documentation for any purpose and without fee is hereby granted,
+provided that the above copyright notice appear in all copies and that
+both that copyright notice and this permission notice appear in
+supporting documentation.
